<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.bitcoin.indexer</groupId>
	<artifactId>slp-indexer-service</artifactId>
	<version>0.0.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>WRITER</name>
	<description>Indexer writer</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.5.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<modules>
		<module>slp-indexer-service-domain</module>
		<module>slp-indexer-service-app</module>
		<module>slp-indexer-service-integration-test</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<spring.cloud.netflix>2.2.2.RELEASE</spring.cloud.netflix>
		<spring.boot.starter.version>2.2.5.RELEASE</spring.boot.starter.version>

		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<grpc.version>1.21.0</grpc.version>
		<spring.cloud.version>2.2.2.RELEASE</spring.cloud.version>
		<gson.version>2.8.5</gson.version>
		<javax.bind.version>2.2.11</javax.bind.version>
		<javax.activation.version>1.1.1</javax.activation.version>
		<guava.version>23.0</guava.version>
		<rxgrpc.version>0.10.0</rxgrpc.version>
		<spring.restdocs.version>2.0.3.RELEASE</spring.restdocs.version>
		<spring.auto.restdocs.version>2.0.4</spring.auto.restdocs.version>
		<spring-boot-admin.version>2.1.3</spring-boot-admin.version>

		<!-- TEST -->
		<testcontainers.version>1.10.2</testcontainers.version>
		<mockito.version>2.22.0</mockito.version>
		<reactor.version>3.2.2.RELEASE</reactor.version>

		<hazelcast.version>3.12</hazelcast.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.bitcoin.indexer</groupId>
				<artifactId>slp-indexer-service-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bitcoin.indexer</groupId>
				<artifactId>slp-indexer-service-app</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bitcoin.indexer</groupId>
				<artifactId>slp-indexer-service-integration-test</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.bitcoin.indexer</groupId>
				<artifactId>slp-indexer-service-domain</artifactId>
				<type>test-jar</type>
				<scope>test</scope>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.zeromq</groupId>
				<artifactId>jeromq</artifactId>
				<version>0.5.1</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>

			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>elasticache-java-cluster-client</artifactId>
				<version>1.1.1</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-mongodb</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-redis</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>3.1.0</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter</artifactId>
				<version>${spring.boot.starter.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
				<version>${spring.cloud.netflix}</version>
				<exclusions>
					<exclusion>
						<artifactId>spring-aop</artifactId>
						<groupId>org.springframework</groupId>
					</exclusion>
					<exclusion>
						<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
						<groupId>org.springframework.cloud</groupId>
					</exclusion>
					<exclusion>
						<artifactId>spring-cloud-starter-netflix-archaius</artifactId>
						<groupId>org.springframework.cloud</groupId>
					</exclusion>
					<exclusion>
						<artifactId>ribbon-eureka</artifactId>
						<groupId>com.netflix.ribbon</groupId>
					</exclusion>
				</exclusions>
			</dependency>


			<dependency>
				<groupId>com.madgag.spongycastle</groupId>
				<artifactId>core</artifactId>
				<version>1.58.0.0</version>
			</dependency>


			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>${javax.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>${javax.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${javax.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${javax.activation.version}</version>
			</dependency>


			<dependency>
				<!-- Added for bootstrap.yml to be loaded, some strange conflict with cloud auto configure.
				   Does not work putting it in spring-app either.
					For the apps using the Eureka cloud starter this is not needed
				 -->
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter</artifactId>
				<version>${spring.cloud.version}</version>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-client</artifactId>
				<version>${spring-boot-admin.version}</version>
			</dependency>


			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>3.14.1</version>
			</dependency>

			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-testing</artifactId>
				<version>${grpc.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-netty-shaded</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-protobuf</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-core</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.grpc</groupId>
				<artifactId>grpc-stub</artifactId>
				<version>${grpc.version}</version>
			</dependency>
			<dependency>
				<groupId>com.salesforce.servicelibs</groupId>
				<artifactId>rxgrpc-stub</artifactId>
				<version>${rxgrpc.version}</version>
			</dependency>
			<dependency>
				<groupId>com.salesforce.servicelibs</groupId>
				<artifactId>rxgrpc</artifactId>
				<version>${rxgrpc.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava2</groupId>
				<artifactId>rxjava</artifactId>
				<version>2.2.5</version> <!-- Keep to same version as rxgrpc -->
			</dependency>


		</dependencies>

	</dependencyManagement>
</project>
